--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <script type="module">
-	import connect from './dist/sql.mjs';
+	import connect, { register_vfs } from './dist/sql.mjs';
+	import OpfsVfs from './dist/opfs.mjs';
+
+	await register_vfs(new OpfsVfs(), true);
 
 	const conn = await connect('test.db');
 	console.log(conn);
