--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <script type="module">
-	import connect, { register_vfs } from './dist/sql.mjs';
+	import connect, { exec, register_vfs } from './dist/sql.mjs';
 	import OpfsVfs from './dist/opfs.mjs';
 
 	await register_vfs(new OpfsVfs(), true);
 
-	const conn = await connect('test.db');
-	console.log(conn);
+	const sql = await connect('test.db')
+	await exec(sql`SELECT hex(randomblob(16))`)
+	await exec(sql`CREATE TABLE IF NOT EXISTS test(a, b)`)
+	await exec(sql`INSERT INTO test VALUES (5, 9), ('Hello', 'World!')`)
+	await exec(sql`SELECT a FROM test`)
 </script>
