--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <script type="module">
 	import {
 		initialized,
-		register_vfs, open, create_scalar_func, make_sql, rows,
+		register_vfs, open, create_scalar_func, make_sql, rows, exec,
 		SQLITE_DETERMINISTIC,
-		opfs
+		opfs,
+		blob_open, blob_write_source, blob_read_source
 	} from './dist/index.mjs';
 
 	await initialized;
@@ -12,12 +13,61 @@
 	register_vfs(opfs, true);
 
 	const conn = await open('test.db');
-	create_scalar_func(conn, function test_func() { return "Big Heccin Cheers!"; }, {flags: SQLITE_DETERMINISTIC, nArgs: -1});
-	create_scalar_func(conn, async function test_async() {
-		await new Promise(res => setTimeout(res, 1000));
-		return 5;
-	});
+	// create_scalar_func(conn, function test_func() { return "Big Heccin Cheers!"; }, {flags: SQLITE_DETERMINISTIC, nArgs: -1});
+	// create_scalar_func(conn, async function test_async() {
+	// 	await new Promise(res => setTimeout(res, 1000));
+	// 	return 5;
+	// });
 	const sql = make_sql(conn);
 
-	console.log(await rows(sql`SELECT test_func(randomblob(9))`));
+	await exec(sql`
+CREATE TABLE IF NOT EXISTS files (
+	filename TEXT NOT NULL UNIQUE,
+	data BLOB NOT NULL,
+	type TEXT DEFAULT 'text/plain'
+) STRICT;`);
+
+
+	const list = document.createElement('ul');
+	document.body.append(list);
+	for await (const {filename, rowid, type, size} of sql`SELECT rowid, filename, type, length(data) AS size FROM files`) {
+		const li = document.createElement('li');
+		li.innerText = `${filename} - ${size}b - ${type}`;
+		if (type.startsWith('image')) {
+			const img = document.createElement('img');
+
+			// Open the sqlite_blob and turn it into a js blob:
+			const blob_ptr = await blob_open(conn, 'files', 'data', rowid);
+			const url = URL.createObjectURL(await (new Response(new ReadableStream(blob_read_source(blob_ptr)), {
+				headers: { "content-type": type }
+			}).blob()));
+			img.src = url;
+			li.append(img);
+		}
+
+		list.append(li);
+	}
+
+	const file_select = document.createElement('input');
+	file_select.setAttribute('type', 'file');
+	document.body.append(file_select);
+
+	file_select.addEventListener('input', async ({ target: { files }}) => {
+		for (const file of files) {
+			console.log(file);
+			// Insert the file into the files table:
+			const [rowid] = await exec(sql`
+				INSERT INTO files VALUES (${file.name}, zeroblob(${file.size}), ${file.type});
+				SELECT last_insert_rowid();
+			`);
+
+			// Open the blob:
+			const blob = await blob_open(conn, 'files', 'data', rowid);
+
+			// Put the file's data into the blob:
+			await (file.stream().pipeTo(new WritableStream(blob_write_source(blob))));
+		}
+	});
+
+	// console.log(await rows(sql`SELECT test_func(randomblob(9))`));
 </script>
