--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
+<script type="_importmap">{ "imports": {
+	"sql.mjs": "https://unpkg.com/sql.mjs"	
+}}</script>
+<script type="importmap">{ "imports": {
+	"sql.mjs": "/dist/index.mjs"
+}}</script>
 <script type="module">
 	import {
-		initialized,
-		register_vfs, open, create_scalar_func, make_sql, rows, exec,
-		SQLITE_DETERMINISTIC,
-		opfs,
-		blob_open, blob_write_source, blob_read_source
-	} from './dist/index.mjs';
+		Conn, open, exec, SqliteBlob
+	} from 'sql.mjs';
 
-	await initialized;
-	
-	register_vfs(opfs, true);
+	const conn = new Conn();
+	await conn.open(open`test.db`);
 
-	const conn = await open('test.db');
-	// create_scalar_func(conn, function test_func() { return "Big Heccin Cheers!"; }, {flags: SQLITE_DETERMINISTIC, nArgs: -1});
-	// create_scalar_func(conn, async function test_async() {
-	// 	await new Promise(res => setTimeout(res, 1000));
-	// 	return 5;
-	// });
-	const sql = make_sql(conn);
-
-	await exec(sql`
+	// Create the files tables
+	await exec(conn.sql`
 CREATE TABLE IF NOT EXISTS files (
 	filename TEXT NOT NULL UNIQUE,
 	data BLOB NOT NULL,
@@ -30,21 +24,9 @@ CREATE TABLE IF NOT EXISTS files (
 
 	const list = document.createElement('ul');
 	document.body.append(list);
-	for await (const {filename, rowid, type, size} of sql`SELECT rowid, filename, type, length(data) AS size FROM files`) {
+	for await (const {filename, rowid, type, size} of conn.sql`SELECT rowid, filename, type, length(data) AS size FROM files`) {
 		const li = document.createElement('li');
 		li.innerText = `${filename} - ${size}b - ${type}`;
-		if (type.startsWith('image')) {
-			const img = document.createElement('img');
-
-			// Open the sqlite_blob and turn it into a js blob:
-			const blob_ptr = await blob_open(conn, 'files', 'data', rowid);
-			const url = URL.createObjectURL(await (new Response(new ReadableStream(blob_read_source(blob_ptr)), {
-				headers: { "content-type": type }
-			}).blob()));
-			img.src = url;
-			li.append(img);
-		}
-
 		list.append(li);
 	}
 
@@ -56,16 +38,15 @@ CREATE TABLE IF NOT EXISTS files (
 		for (const file of files) {
 			console.log(file);
 			// Insert the file into the files table:
-			const [rowid] = await exec(sql`
+			const [rowid] = await exec(conn.sql`
+				BEGIN;
 				INSERT INTO files VALUES (${file.name}, zeroblob(${file.size}), ${file.type});
 				SELECT last_insert_rowid();
 			`);
-
-			// Open the blob:
-			const blob = await blob_open(conn, 'files', 'data', rowid);
-
-			// Put the file's data into the blob:
-			await (file.stream().pipeTo(new WritableStream(blob_write_source(blob))));
+			const blob = await SqliteBlob.open(conn, 'files', 'data', rowid);;
+			await blob.write_from(file.stream());
+			await blob.close();
+			await exec(conn.sql`COMMIT`);
 		}
 	});
 
