--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <script type="_importmap">{ "imports": {
-	"sql.mjs": "https://unpkg.com/sql.mjs"	
+	"sql.mjs": "https://unpkg.com/sql.mjs",
+	"sql.mjs/": "https://unpkg.com/sql.mjs/"
 }}</script>
 <script type="importmap">{ "imports": {
 	"sql.mjs": "/dist/index.mjs",
