scratch that... no copy src
I'm probably going to delete the package.json anyhow, so I don't think there's really much point in building a "package ready" dist folder.  Instead, let's just put the wasm and generated js into src/dist and move forward to adding tests.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-<script type="_importmap">{ "imports": {
-	"sql.mjs": "https://unpkg.com/sql.mjs",
-	"sql.mjs/": "https://unpkg.com/sql.mjs/"
-}}</script>
 <script type="importmap">{ "imports": {
-	"sql.mjs": "/dist/index.js",
-	"sql.mjs/": "/dist/"
+	"sql.mjs": "/src/index.js",
+	"sql.mjs/": "/src/"
 }}</script>
 <script type="module">
 	import {
